--- a/index.html
+++ b/index.html
@@ -70,7 +70,7 @@
         </div>
         <div class="carousel-inner">
           <div class="carousel-item active" data-bs-interval="2000  ">
-            <img src="./images/best-laptops-for-programming-20220921-medium.jpg" class="d-block w-100" alt="...">
+            <img src="images/best-laptops-for-programming-20220921-medium.jpg" class="d-block w-100" alt="...">
             <div class="carousel-caption d-none d-md-block">
               <h5>First slide label</h5>
               <p>Some representative placeholder content for the first slide.</p>
