--- a/index.html
+++ b/index.html
@@ -77,14 +77,14 @@
             </div>
           </div>
           <div class="carousel-item " data-bs-interval="2000 ">
-            <img src="/images/istockphoto-1194430863-612x612.jpg" class="d-block w-100" alt="image">
+            <img src="/images/istockphoto-1194430863-612x612.jpg" class="d-block w-100" alt="image-2">
             <div class="carousel-caption d-none d-md-block">
               <h5>Second slide label</h5>
               <p>Some representative placeholder content for the second slide.</p>
             </div>
           </div>
           <div class="carousel-item" data-bs-interval="2000 " >
-            <img src="/images/istockphoto-1295900106-612x612.jpg" class="d-block w-100" alt="image">
+            <img src="/images/istockphoto-1295900106-612x612.jpg" class="d-block w-100" alt="image-3">
             <div class="carousel-caption d-none d-md-block">
               <h5>Third slide label</h5>
               <p>Some representative placeholder content for the third slide.</p>
