--- a/index.html
+++ b/index.html
@@ -70,21 +70,21 @@
         </div>
         <div class="carousel-inner">
           <div class="carousel-item active" data-bs-interval="2000  ">
-            <img src="/images/best-laptops-for-programming-20220921-medium.jpg" class="d-block w-100" alt="image">
+            <img src="./images/best-laptops-for-programming-20220921-medium.png" class="d-block w-100" alt="image">
             <div class="carousel-caption d-none d-md-block">
               <h5>First slide label</h5>
               <p>Some representative placeholder content for the first slide.</p>
             </div>
           </div>
           <div class="carousel-item " data-bs-interval="2000 ">
-            <img src="/images/istockphoto-1194430863-612x612.jpg" class="d-block w-100" alt="programmer-2">
+            <img src="./images/istockphoto-1194430863-612x612.jpg" class="d-block w-100" alt="programmer-2">
             <div class="carousel-caption d-none d-md-block">
               <h5>Second slide label</h5>
               <p>Some representative placeholder content for the second slide.</p>
             </div>
           </div>
           <div class="carousel-item" data-bs-interval="2000 " >
-            <img src="/images/istockphoto-1295900106-612x612.jpg" class="d-block w-100" alt="cruosel-3">
+            <img src="./images/istockphoto-1295900106-612x612.jpg" class="d-block w-100" alt="cruosel-3">
             <div class="carousel-caption d-none d-md-block">
               <h5>Third slide label</h5>
               <p>Some representative placeholder content for the third slide.</p>
