--- a/index.html
+++ b/index.html
@@ -77,7 +77,7 @@
             </div>
           </div> 
           <div class="carousel-item " data-bs-interval="2000 ">
-            <img src="/images/istockphoto-1194430863-612x612.jpg" alt="programmer-2">
+            <img src="https://www.google.com/url?sa=i&url=https%3A%2F%2Frobodk.com%2Fblog%2Frobot-sdk%2Fprogramming-language-png-download-image%2F&psig=AOvVaw3jq2cGIDTTwem397qh_z1q&ust=1677601745368000&source=images&cd=vfe&ved=0CBAQjRxqFwoTCIDgvu2Ptv0CFQAAAAAdAAAAABAE" alt="programmer-2">
             <div class="carousel-caption d-none d-md-block">
               <h5>Second slide label</h5>
               <p>Some representative placeholder content for the second slide.</p>
