--- a/index.html
+++ b/index.html
@@ -33,7 +33,8 @@
       
       </button class="collapse navbar-collapse" id="navbarSupportedContent">
       <ul class="navbar-nav ml-auto mb-2 mb-lg-0">
-        <li class="nav-item">
+        <li class="nav-item d-flex flex-nowwrap
+                   ">
           <a class="nav-link active " aria-current="page" href="index.html">Home</a>
         </li>
         <li class="nav-item">
