--- a/index.html
+++ b/index.html
@@ -25,23 +25,23 @@
   </head>
 <body>
  
-
-<nav class="navbar navbar-expand-lg bg-light ">
-  <div class="container-fluid shadow-sm">
-    <img class="logo" src="./images/competitive_coding_logo_by_dollarakshay_dc5ov3v-fullview-removebg-preview.png" alt="">
-
-      
-      </button class="collapse navbar-collapse" id="navbarSupportedContent">
-      <ul class="navbar-nav ml-auto mb-2 mb-lg-0">
-        <li class="nav-item ">
-          <a class="nav-link active " aria-current="page" href="index.html">Home</a>
+<nav class="navbar navbar-expand-lg bg-body-tertiary">
+  <div class="container-fluid">
+    <a class="navbar-brand" href="#">Navbar</a>
+    <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+      <span class="navbar-toggler-icon"></span>
+    </button>
+    <div class="collapse navbar-collapse" id="navbarSupportedContent">
+      <ul class="navbar-nav me-auto mb-2 mb-lg-0">
+        <li class="nav-item">
+          <a class="nav-link active" aria-current="page" href="#">Home</a>
         </li>
         <li class="nav-item">
-          <a class="nav-link text-capitalize " href="about.html">about us</a>
+          <a class="nav-link" href="#">Link</a>
         </li>
-        <!-- <li class="nav-item dropdown">
+        <li class="nav-item dropdown">
           <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">
-            Services
+            Dropdown
           </a>
           <ul class="dropdown-menu">
             <li><a class="dropdown-item" href="#">Action</a></li>
@@ -49,17 +49,19 @@
             <li><hr class="dropdown-divider"></li>
             <li><a class="dropdown-item" href="#">Something else here</a></li>
           </ul>
-        </li> -->
-        <li class="nav-item">
-            <a class="nav-link text-capitalize" href="gallery.html">Gallery</a>
         </li>
-         <li class="nav-item">
-            <a class="nav-link text-capitalize" href="contact.html">contact us</a>
-         </li>
+        <li class="nav-item">
+          <a class="nav-link disabled">Disabled</a>
+        </li>
       </ul>
+      <form class="d-flex" role="search">
+        <input class="form-control me-2" type="search" placeholder="Search" aria-label="Search">
+        <button class="btn btn-outline-success" type="submit">Search</button>
+      </form>
     </div>
   </div>
 </nav>
+ 
 
 <header>
     <div id="carouselExampleDark" class="carousel carousel-dark slide" data-bs-ride="carousel">
