--- a/gallery.html
+++ b/gallery.html
@@ -19,37 +19,9 @@
 
   </head>
 <body>
- <nav class="navbar navbar-expand-lg bg-body-tertiary ">
-    <div class="container-fluid">
-       <div><h1 style="font-family: 'Times New Roman', Times, serif; font-size: 20px;padding-top: 10px;padding-right: 80px; color: rgb(142, 142, 215);">Programming World</h1></div>
-      <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
-        <span class="navbar-toggler-icon"></span>
-      </button>
-      <div class="collapse navbar-collapse" id="navbarSupportedContent">
-        <ul class="navbar-nav me-auto mb-2 mb-lg-0">
-          <li class="nav-item">
-            <a class="nav-link active" aria-current="page" href="index.html">Home</a>
-          </li>
-          <li class="nav-item">
-            <a class="nav-link " href="about.html">About</a>
-          </li>
-          <li class="nav-item">
-            <a class="nav-link" href="gallery.html">Gallery</a>
-          </li>
-          <li class="nav-item">
-            <a class="nav-link" href="contact.html">Contact Us</a>
-          </li>
-           
-        </ul>
-        <form class="d-flex" role="search">
-          <input class="form-control me-2" type="search" placeholder="Search" aria-label="Search">
-          <button class="btn btn-outline-success" type="submit">Search</button>
-        </form>
-      </div>
-    </div>
-  </nav>
+  
 
-<!-- <nav class="navbar navbar-expand-lg bg-light ">
+<nav class="navbar navbar-expand-lg bg-light ">
   <div class="container-fluid shadow-sm">
     <img class="logo" src="./images/competitive_coding_logo_by_dollarakshay_dc5ov3v-fullview-removebg-preview.png" alt="">
 
@@ -82,7 +54,8 @@
       </ul>
     </div>
   </div>
-</nav> -->
+</nav> 
+
 <section class="main_heading my-5 ">
     <div class="text-center my-5">
       <h1 >Gallery</h1>
