--- a/index.html
+++ b/index.html
@@ -27,7 +27,8 @@
  
  <nav class="navbar navbar-expand-lg bg-body-tertiary ">
     <div class="container-fluid">
-       <div><h1 style="font-family: 'Times New Roman', Times, serif; font-size: 20px;padding-top: 10px;padding-right: 80px; color: rgb(142, 142, 215);">Programming World</h1></div>
+    <img style="padding-right:auto; border-radius: 50px;" src="https://i.pinimg.com/originals/3b/c7/e6/3bc7e6c8a756a19d4cd9c81bb43418c0.jpg" alt=""  height="80px">
+      
       <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
         <span class="navbar-toggler-icon"></span>
       </button>
