--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
  
  <nav class="navbar navbar-expand-lg bg-body-tertiary ">
     <div class="container-fluid">
-    <img style="padding-right:auto; border-radius: 50px;" src="/images/3bc7e6c8a756a19d4cd9c81bb43418c0.jpg" alt=""  height="80px">
+    <img style="padding-right:auto; border-radius: 50px;" src="./images/3bc7e6c8a756a19d4cd9c81bb43418c0.jpg" alt=""  height="80px">
       
       <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
         <span class="navbar-toggler-icon"></span>
