--- a/gallery.html
+++ b/gallery.html
@@ -39,7 +39,7 @@
           <a class="nav-link " href="about.html">About</a>
         </li>
         <li class="nav-item">
-          <a class="nav-link gallery" href="gallery.html">Gallery</a>
+          <a class="nav-link active gallery" href="gallery.html">Gallery</a>
         </li>
         <li class="nav-item">
           <a class="nav-link" href="contact.html">Contact Us</a>
